# wishport

./: .editorconfig  .gitattributes  .hgignore  LICENCE  README.rst  build.gradle.kts  generate-errno.py  gradle.properties  settings.gradle.kts
docs/: conf.py  index.rst  pyproject.toml
wishport-core/: build.gradle.kts
wishport-core/src/cinterop/: extras.def
wishport-core/src/commonMain/kotlin/tf/veriny/wishport/: AsyncCloseable.kt  AsyncClosingScope.kt  GlobalHelpers.kt
wishport-core/src/commonTest/kotlin/tf/veriny/wishport/: Test Basic Running.kt  TestHelpers.kt
wishport-core/src/linuxX64Test/kotlin/tf/veriny/wishport/: Test IOUring.kt  Test Reading Zero.kt
wishport-errors/: build.gradle.kts
wishport-errors/src/commonMain/kotlin/tf/veriny/wishport/: SyscallError.kt
wishport-helpers/: README.rst  build.gradle.kts
wishport-helpers/src/cinterop/: builtins.def  extras.def  getrandom.def
wishport-helpers/src/commonMain/kotlin/tf/veriny/wishport/: AsyncCloseable.kt  AsyncIterable.kt  Cancellable.kt  Closeable.kt  ClosingScope.kt  CommonErrors.kt  Either.kt  EitherExt.kt  Environment.kt  ErrnoData.kt  Imperatavize.kt  Imperitavize.kt  KotlinSupport.kt  (+7 more)
wishport-static-openssl/: build.gradle.kts
wishport-static-openssl/src/cinterop/: openssl.def
wishport-static-uring/: build.gradle.kts
wishport-static-uring/src/cinterop/: liburing.def
wishport-test-perf/: build.gradle.kts
wishport-test-perf/src/commonMain/kotlin/: MainKt.kt
wishport-tls/: build.gradle.kts
wishport-uring/: build.gradle.kts
wishport-uring/src/cinterop/: liburing.def
(+168 files in other folders)
